<resources>
    <string name="app_name">El Potato</string>
    <string name="connection_status">Connection status</string>
    <string name="button_keyboard">Keyboard</string>
    <string name="button_mouse">Mouse</string>
    <string name="bluetooth_settings">Bluetooth settings</string>
    <string name="touchpad">Touchpad</string>
    <string name="device_name">Device name</string>
    <string name="bluetooth_turned_on">Bluetooth turned on?</string>
    <string name="paired_devices">Paired devices:</string>
    <string name="stop">Stop</string>
    <string name="scan">Scan</string>
    <string name="scanning">Scanning…</string>
    <string name="status_idle">Not connected</string>
    <string name="status_scanning">Discovering nearby devices…</string>
    <string name="status_advertising">Waiting for incoming connection…</string>
    <string name="status_connecting">Connecting…</string>
    <string name="status_connected">Connected to device %1$s</string>
    <string name="advertise">Advertise</string>
    <string name="advertising">Advertising…</string>
    <string name="found_devices">Discovered devices:</string>
    <string name="advertising_error">Advertising error (%1$d)</string>
    <string name="connection_error">Connection error</string>
    <string name="connection_error_details">Connection error: %1$s</string>
    <string name="bluetooth_disabled_error">Application needs bluetooth adapter turned on to work correctly</string>
    <string name="bluetooth_disabled">Bluetooth adapter is turned off</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="paired_devices_list">List of paired devices</string>
    <string name="permission_denied">Permission required to run was not granted</string>
    <string name="discovery_failure">Failed to start bluetooth devices discovery</string>
    <string name="crash_dialog_text">Sorry, the application crashed :( You can send the crash report to the developer to help making El Potato a better app.</string>
    <string name="crash">Crash</string>
    <string name="version_info">Version info</string>
    <string name="send_logs">Send logs to developer</string>

</resources>